0808 changed titles and spacing

--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.732"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.734"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.732" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.732"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.734" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.734"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.732">
-<script src="./assets/js/layout.ie.js?1.0.732"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.734">
+<script src="./assets/js/layout.ie.js?1.0.734"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.732"></script>
+<script src="./assets/js/CloudZoom.js?1.0.734"></script>
 	
     <title>Smart Sprout Affordable Digital Marketing Services</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.732">
-	<script src="./assets/js/script.js?1.0.732"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.734">
+	<script src="./assets/js/script.js?1.0.734"></script>
     <meta charset="utf-8">
     
     
@@ -201,7 +201,7 @@
 		<div class=" bd-columnwrapper-114 
  col-sm-9">
     <div class="bd-layoutcolumn-114 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-62 bd-content-element">
-    Improving search rankings is essentially optimising the site for visitors. Google's role is to serve its users the highest quality content. This means the website should be technically sound, have the minimum page content requirements, be easy to navigate and should have a low bounce rate (visitors that leave the site without taking action) as well as many other factors.<br><br><br>To increase my client's success rate, I feel it is useful to coach those responsible for the site — whether it be the marketing team or the business owner. I also offer a more hands on approach to achieve swift results.
+    Improving search rankings is essentially optimising the site for visitors. Google's role is to serve its users the highest quality content. This means the website should be technically sound, have the minimum page content requirements, be easy to navigate and should have a low bounce rate (visitors that leave the site without taking action) as well as many other factors.<br><br>To increase my client's success rate, I feel it is useful to coach those responsible for the site — whether it be the marketing team or the business owner. I also offer a more hands on approach to achieve swift results.
 </p></div></div>
 </div>
             </div>
@@ -225,7 +225,7 @@
 		<div class=" bd-columnwrapper-111 
  col-sm-9">
     <div class="bd-layoutcolumn-111 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-65 bd-content-element">
-    Fresh, targeted content is essential to drawing in website traffic and improving SEO. Blog content demonstrates authority and knowledge, and builds trust with your visitors. Before you start writing, it is important to know who you are writing for, what interests they hold and what problems this market are looking to solve. Once you have this information it is possible to build a content strategy. The next stage is to lay out a content calendar.<br><br>Aside from working in digital marketing, I manage a team of writers who produce content for one of my sites. To put this in perspective, within just hours of publishing it is normal to draw hundreds of new visitors to the site. One of our posts last year received over 20,000 visits within the first three days. To achieve results like this an outreach strategy should also be in place.<br><br><br>I will help you to define your market and understand which articles will bring the most traffic to your website. If you need support in writing content, I can have some or all the content written for you — depending on your budget.
+    Fresh, targeted content is essential to drawing in website traffic and improving SEO. Blog content demonstrates authority and knowledge, and builds trust with your visitors. Before you start writing, it is important to know who you are writing for, what interests they hold and what problems this market are looking to solve. Once you have this information it is possible to build a content strategy. The next stage is to lay out a content calendar.<br><br>Aside from working in digital marketing, I manage a team of writers who produce content for one of my sites. To put this in perspective, within just hours of publishing it is normal to draw hundreds of new visitors to the site. One of our posts last year received over 20,000 visits within the first three days. To achieve results like this an outreach strategy should also be in place.<br><br>I will help you to define your market and understand which articles will bring the most traffic to your website. If you need support in writing content, I can have some or all the content written for you — depending on your budget.
 </p></div></div>
 </div>
             </div>
@@ -249,7 +249,7 @@
 		<div class=" bd-columnwrapper-120 
  col-sm-9">
     <div class="bd-layoutcolumn-120 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-69 bd-content-element">
-    Before embarking on a paid campaign, I would advise you to optimise your website. I consider efforts put into paid campaigns to be (mostly) temporary while improving organic traffic draws regular visitors without added costs. That being said. Paid campaigns often yield instantaneous returns. This may be particularly useful for product launches and building followers on social channels.<br><br><br>I have managed many paid media campaigns funneling traffic from both search engines and partnered sites as well as social media platforms. I will help you to avoid common mistakes — keeping your campaigns efficient.
+    Before embarking on a paid campaign, I would advise you to optimise your website. I consider efforts put into paid campaigns to be (mostly) temporary while improving organic traffic draws regular visitors without added costs. That being said. Paid campaigns often yield instantaneous returns. This may be particularly useful for product launches and building followers on social channels.<br><br>I have managed many paid media campaigns funneling traffic from both search engines and partnered sites as well as social media platforms. I will help you to avoid common mistakes — keeping your campaigns efficient.
 </p></div></div>
 </div>
             </div>
@@ -273,7 +273,7 @@
 		<div class=" bd-columnwrapper-128 
  col-sm-9">
     <div class="bd-layoutcolumn-128 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-73 bd-content-element">
-    It is possible to have ample traffic and poor conversion. There are a number of factors in play here. Page load speed, browser errors, unfamiliar navigation, unsuitable colour schemes and even page layout are just some of the factors that can affect whether your visitors take action.<br><br><br>I will take you through the process of eliminating common mistake. Usability testing and split testing (AB testing) can also be used to identify anything else we can improve.
+    It is possible to have ample traffic and poor conversion. There are a number of factors in play here. Page load speed, browser errors, unfamiliar navigation, unsuitable colour schemes and even page layout are just some of the factors that can affect whether your visitors take action.<br><br>I will take you through the process of eliminating common mistake. Usability testing and split testing (AB testing) can also be used to identify anything else we can improve.
 </p></div></div>
 </div>
             </div>
