--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.734"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.738"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.734" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.734"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.738" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.738"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.734">
-<script src="./assets/js/layout.ie.js?1.0.734"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.738">
+<script src="./assets/js/layout.ie.js?1.0.738"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.734"></script>
+<script src="./assets/js/CloudZoom.js?1.0.738"></script>
 	
     <title>Smart Sprout Affordable Digital Marketing Services</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.734">
-	<script src="./assets/js/script.js?1.0.734"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.738">
+	<script src="./assets/js/script.js?1.0.738"></script>
     <meta charset="utf-8">
     
     
@@ -201,7 +201,7 @@
 		<div class=" bd-columnwrapper-114 
  col-sm-9">
     <div class="bd-layoutcolumn-114 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-62 bd-content-element">
-    Improving search rankings is essentially optimising the site for visitors. Google's role is to serve its users the highest quality content. This means the website should be technically sound, have the minimum page content requirements, be easy to navigate and should have a low bounce rate (visitors that leave the site without taking action) as well as many other factors.<br><br>To increase my client's success rate, I feel it is useful to coach those responsible for the site — whether it be the marketing team or the business owner. I also offer a more hands on approach to achieve swift results.
+    Improving search rankings is essentially optimising the site for visitors. Google's role is to serve its users the highest quality content that best matches the users search query. This means the website should be technically sound, have at least the minimum textual page content, be easy to navigate and should have a low bounce rate (the percentage of visitors that leave the site without taking action) as well as many other factors.<br><br><br>Using specialised software, I am able to quickly identify areas of the site that may not meet Google's strict requirements, discover the best key-phrases to gain targeted traffic and reveal off-site back-links that could cause your site to be penalised by search engines.<br><br><br>To increase my clients' success rate, I feel it is useful to coach those who manage the site — whether it be the marketing team or the business owner — as this helps to promote best practice moving forward and reduce costs.
 </p></div></div>
 </div>
             </div>
