More Mobile Changes

--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.740"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.742"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.740" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.740"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.742" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.742"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.740">
-<script src="./assets/js/layout.ie.js?1.0.740"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.742">
+<script src="./assets/js/layout.ie.js?1.0.742"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.740"></script>
+<script src="./assets/js/CloudZoom.js?1.0.742"></script>
 	
     <title>Smart Sprout Affordable Digital Marketing Services</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.740">
-	<script src="./assets/js/script.js?1.0.740"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.742">
+	<script src="./assets/js/script.js?1.0.742"></script>
     <meta charset="utf-8">
     
     
@@ -225,7 +225,7 @@
 		<div class=" bd-columnwrapper-111 
  col-sm-9">
     <div class="bd-layoutcolumn-111 bd-column" ><div class="bd-vertical-align-wrapper"><p class=" bd-textblock-65 bd-content-element">
-    Fresh, targeted content is essential to drawing in website traffic and improving SEO. Blog content demonstrates authority and knowledge, and builds trust with your visitors. Before you start writing, it is important to know who you are writing for, what interests they hold and what problems this market are looking to solve. Once you have this information it is possible to build a content strategy. The next stage is to lay out a content calendar.<br><br>Aside from working in digital marketing, I manage a team of writers who produce content for one of my sites. To put this in perspective, within just hours of publishing it is normal to draw hundreds of new visitors to the site. One of our posts last year received over 20,000 visits within the first three days. To achieve results like this an outreach strategy should also be in place.<br><br>I will help you to define your market and understand which articles will bring the most traffic to your website. If you need support in writing content, I can have some or all the content written for you — depending on your budget.
+    Fresh, targeted content is essential to drawing in website traffic and improving SEO. Blog content demonstrates authority and knowledge, and builds trust with your visitors. Before you start writing, it is important to know who you are writing for, what interests they hold and what problems this market are looking to solve. Once you have this information it is possible to build a content strategy. The next stage is to lay out a content calendar.<br><br>Aside from working in digital marketing, I manage a team of writers who produce content for one of my sites. These writers are instrumental in attracting new visitors. To put this in perspective, within just hours of publishing it is normal to draw hundreds of new visitors to the site. One of our posts last year received over 20,000 visits within the first three days. To achieve results like this an outreach strategy should also be in place.<br><br>I will help you to define your market and understand which articles will bring the most traffic to your website. If you need support in writing content, I can have some or all the content written for you — depending on your budget.
 </p></div></div>
 </div>
             </div>
