--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="bd-container-inner bd-margins clearfix">
         <div class=" bd-layoutbox-3 bd-no-margins clearfix">
     <div class="bd-container-inner">
-        <a class=" bd-logo-2" href="./">
+        <a class=" bd-logo-2" href="home.html">
     <img class=" bd-imagestyles" src="./assets/images/d2c7bf19aee3508a434fd54bd714c414_SmartSprout.png"
  alt="Smart Sprout Digital Marketing">
 </a>
