Contact form redone

--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.786"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.803"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.786" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.786"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.803" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.803"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.786">
-<script src="./assets/js/layout.ie.js?1.0.786"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.803">
+<script src="./assets/js/layout.ie.js?1.0.803"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.786"></script>
+<script src="./assets/js/CloudZoom.js?1.0.803"></script>
 	
     <title>smartsprout about</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.786">
-	<script src="./assets/js/script.js?1.0.786"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.803">
+	<script src="./assets/js/script.js?1.0.803"></script>
     <meta charset="utf-8">
     
     
@@ -186,31 +186,47 @@
         <div class=" bd-layoutbox-7 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h1 class=" bd-textblock-14 bd-content-element">
-    About Smart Sprout
+    About Smart Sprout digital marketing
 </h1>
 	
+		<div class=" bd-spacer-22 clearfix"></div>
+	
 		<h2 class=" bd-textblock-40 bd-content-element">
-    What is smartsprout?
+    What is Smart Sprout?
 </h2>
 	
 		<p class=" bd-textblock-44 bd-content-element">
-    Smart Sprout is a one-man&nbsp;digital agency focused on making digital support accessible to all businesses. My time is spent mentoring business owners/marketing teams on best practice and routinely carrying out market research, optimising websites and managing paid campaigns.<br><br>I also collaborate with a number of professionals who I know provide quality work at good value — such as design &amp; illustration, website development, copy writing and printing (you are welcome to source these services elsewhere if preferred).
+    Smart Sprout is a one-man&nbsp;digital agency focused on making digital support accessible to all businesses. My time is spent mentoring business owners/marketing teams on best practice and routinely carrying out market research, optimising websites and managing paid campaigns.<br><br>I also collaborate with a number of professionals who provide quality work at good value — such as design &amp; illustration, website development, copy writing and printing (you are welcome to source these services elsewhere if preferred).
 </p>
 	
+		<div class=" bd-spacer-3 clearfix"></div>
+	
 		<h2 class=" bd-textblock-19 bd-content-element">
-    Why not focus on bigger businesses?
+    Why is Smart Sprout different?
 </h2>
 	
 		<p class=" bd-textblock-25 bd-content-element">
-    Working in marketing over the last decade, I have become disheartened by the way corporate firms dominate, not just the internet, but business in general. Digital marketing agencies are encouraged (by Google) to pump up their prices and focus on those with money to burn. This means that small businesses just compete against each-other for the left-overs.
+    Working in marketing over the last decade, I have become disheartened by the way corporate firms dominate. Until now, unless you had a sizable marketing budget, digital marketing support was out of reach. Smart Sprout is a digital agency that promises to keep marketing costs affordable for everyone.
 </p>
 	
+		<div class=" bd-spacer-10 clearfix"></div>
+	
+		<h2 class=" bd-textblock-7 bd-content-element">
+    How does Smart Sprout keep the prices so low?
+</h2>
+	
+		<p class=" bd-textblock-11 bd-content-element">
+    There is no office and no employees. That means no heating, lighting, water and no salaries to pay. Instead, when I feel a business would benefit from other services, I reach out to trusted freelancers who offer great services at reasonable costs and I manage the process, working closely with them to provide a solid and seamless process.<br><br><br>In addition to low overheads, I further reduce costs by mentoring business owners and their teams. This allows me to focus my time on the more complex parts of digital marketing while the business improves its online processes moving forward.
+</p>
+	
+		<div class=" bd-spacer-18 clearfix"></div>
+	
 		<h2 class=" bd-textblock-31 bd-content-element">
-    It's time for change
+    What will business owners learn?
 </h2>
 	
 		<p class=" bd-textblock-36 bd-content-element">
-    I have worked within world class digital marketing agencies, trained with leading marketing experts from around the world, and managed multiple, successful online businesses. This enables me to work within a variety of markets and compete "assertively" online. Coaching business owners and their teams I am able to minimise my work load and keep the costs low.
+    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books. This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
 </p>
     </div>
 </div>
@@ -242,7 +258,7 @@
     "Mike's mentoring has been invaluable in helping me with my business: Silver Bamboo.<br><br><br>He has truly gone that extra mile in everything that he has helped me 
 with so far. I feel motivated by his genuine dedication to give his time
  and effort for small and start up vegan businesses to blossom and 
-thrive. Knowing that he is able to provide relevant ongoing support is just incredible."<br><br><b>Joshna, Silver Bamboo</b>
+thrive. Knowing that he is able to provide relevant ongoing support is just incredible."<br><br><b>Joshna, Silver Bamboo</b><b>&nbsp;(online store)</b>
 </p></div></div>
 </div>
 	
@@ -274,7 +290,7 @@ greatly appreciated your encouragement!"<br><br><b>Naomi, Facial Therapist</b>
     "I had a great time with Michael. He gave me advice on my web-shop and 
 website and content and digital marketing strategy, and explained 
 things I didn't really understand in a  way that made sense. He also made it 
-easy for me to implement his advice."<br><br><b>Steve, Friendship Shoes</b>
+easy for me to implement his advice."<br><br><b>Steve, Friendship Shoes</b><b>&nbsp;(online store)</b>
 </p></div></div>
 </div>
 	
@@ -285,7 +301,7 @@ easy for me to implement his advice."<br><br><b>Steve, Friendship Shoes</b>
 		<p class=" bd-textblock-21 bd-content-element">
     "Polite, knowledgeable and easy to talk to. I received lots of useful 
 recommendations which I'll be putting into practice - would definitely 
-recommend."<br><br><b>Hassan, Veganubi</b>
+recommend."<br><br><b>Hassan, Veganubi (online store)</b>
 </p></div></div>
 </div>
 	
