--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.803"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.808"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.803" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.803"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.808" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.808"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.803">
-<script src="./assets/js/layout.ie.js?1.0.803"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.808">
+<script src="./assets/js/layout.ie.js?1.0.808"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.803"></script>
+<script src="./assets/js/CloudZoom.js?1.0.808"></script>
 	
     <title>smartsprout about</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.803">
-	<script src="./assets/js/script.js?1.0.803"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.808">
+	<script src="./assets/js/script.js?1.0.808"></script>
     <meta charset="utf-8">
     
     
@@ -216,7 +216,7 @@
 </h2>
 	
 		<p class=" bd-textblock-11 bd-content-element">
-    There is no office and no employees. That means no heating, lighting, water and no salaries to pay. Instead, when I feel a business would benefit from other services, I reach out to trusted freelancers who offer great services at reasonable costs and I manage the process, working closely with them to provide a solid and seamless process.<br><br><br>In addition to low overheads, I further reduce costs by mentoring business owners and their teams. This allows me to focus my time on the more complex parts of digital marketing while the business improves its online processes moving forward.
+    There is no office and no employees. That means no heating, lighting, water and no salaries to pay. Instead, when I feel a business would benefit from other services, I reach out to trusted freelancers who offer great services at reasonable costs and I manage the process, working closely with them to provide a solid and seamless process.<br><br>In addition to low overheads, I further reduce costs by mentoring business owners and their teams. This allows me to focus my time on the more complex parts of digital marketing while the business improves its online processes moving forward.
 </p>
 	
 		<div class=" bd-spacer-18 clearfix"></div>
