--- a/contact.html
+++ b/contact.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.803"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.808"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.803" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.803"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.808" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.808"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.803">
-<script src="./assets/js/layout.ie.js?1.0.803"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.808">
+<script src="./assets/js/layout.ie.js?1.0.808"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.803"></script>
+<script src="./assets/js/CloudZoom.js?1.0.808"></script>
 	
     <title>Contact Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.803">
-	<script src="./assets/js/script.js?1.0.803"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.808">
+	<script src="./assets/js/script.js?1.0.808"></script>
     <meta charset="utf-8">
     
     
@@ -292,7 +292,7 @@
 </div>
 	
 		<p class=" bd-textblock-38 bd-content-element">
-    Would you like to be added to our mailing list for useful tips, tricks and offers?
+    Would you like to be added to our mailing list for useful online tips and offers?
 </p>
 	
 		<div class=" bd-radiobutton-4 form-group">
@@ -320,7 +320,7 @@
 		<a 
  name="submit"
  onclick="jQuery(this).closest('form').submit();" href="#" class="bd-linkbutton-5  bd-button  bd-own-margins bd-content-element"    >
-    Free Report
+    Send
 </a>
         </div>
     </div>
