Added footer links and custom CSS

--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.874"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.884"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.874" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.874"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.884" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.884"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.874">
-<script src="./assets/js/layout.ie.js?1.0.874"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.884">
+<script src="./assets/js/layout.ie.js?1.0.884"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.874"></script>
+<script src="./assets/js/CloudZoom.js?1.0.884"></script>
 	
     <title>Smart Sprout Affordable Digital Marketing Services</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.874">
-	<script src="./assets/js/script.js?1.0.874"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.884">
+	<script src="./assets/js/script.js?1.0.884"></script>
     <meta charset="utf-8">
     
     
@@ -322,13 +322,15 @@
                 <div class=" bd-columnwrapper-10 
  col-md-3
  col-sm-6">
-    <div class="bd-layoutcolumn-10 bd-column" ><div class="bd-vertical-align-wrapper"><span class="bd-iconlink-2 bd-own-margins bd-icon-24 bd-icon "></span>
+    <div class="bd-layoutcolumn-10 bd-column" ><div class="bd-vertical-align-wrapper"><span class="bd-iconlink-3 bd-own-margins bd-icon-40 bd-icon "></span>
 	
 		<div class=" bd-spacer-5 clearfix"></div>
 	
-		<p class=" bd-textblock-1 bd-content-element">
-    Southampton, UK
-</p></div></div>
+		<div class=" bd-customhtml-2 bd-tagstyles">
+    <div class="bd-container-inner bd-content-element">
+        <p class="footer-links"><a href="./" draggable="false">Low-cost Marketing<br></a></p><p class="footer-links"><a href="./pricing.html" draggable="false">Smart Sprout Pricing</a></p><p class="footer-links"><a href="./" draggable="false">Affordable Marketing Tips</a></p><p class="footer-links"><a href="./contact.html" draggable="false">Contact&nbsp;Smart Sprout</a></p><p class="footer-links"><br></p>
+    </div>
+</div></div></div>
 </div>
 	
 		<div class=" bd-columnwrapper-14 
@@ -346,12 +348,12 @@
 		<div class=" bd-columnwrapper-16 
  col-md-3
  col-sm-6">
-    <div class="bd-layoutcolumn-16 bd-background-width  bd-column" ><div class="bd-vertical-align-wrapper"><span class="bd-iconlink-7 bd-own-margins bd-icon-30 bd-icon "></span>
+    <div class="bd-layoutcolumn-16 bd-background-width  bd-column" ><div class="bd-vertical-align-wrapper"><span class="bd-iconlink-2 bd-own-margins bd-icon-24 bd-icon "></span>
 	
 		<div class=" bd-spacer-9 clearfix"></div>
 	
-		<p class=" bd-textblock-18 bd-content-element">
-    077 077 070 41<br><br>
+		<p class=" bd-textblock-1 bd-content-element">
+    Southampton, UK
 </p></div></div>
 </div>
 	
@@ -380,7 +382,7 @@
 </div>
 	
 		<p class=" bd-textblock-20 bd-content-element">
-    © 2017 smartsprout.<br>All Rights Reserved.
+    © 2017 Smart Sprout.<br>All Rights Reserved.
 </p></div></div>
 </div>
             </div>
