vegan page added

--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.888"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.934"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.888" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.888"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.934" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.934"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.888">
-<script src="./assets/js/layout.ie.js?1.0.888"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.934">
+<script src="./assets/js/layout.ie.js?1.0.934"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.888"></script>
+<script src="./assets/js/CloudZoom.js?1.0.934"></script>
 	
     <title>Affordable Digital Marketing Support Pricing  Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.888">
-	<script src="./assets/js/script.js?1.0.888"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.934">
+	<script src="./assets/js/script.js?1.0.934"></script>
     <meta charset="utf-8">
     
     
@@ -197,7 +197,7 @@
 </h1>
 	
 		<p class=" bd-textblock-131 bd-content-element">
-    The following prices are just a guide. Prices may vary based on project size and special requirements. Feel free to contact me regarding your specific needs and I will send you an estimate.
+    Prices may vary based on project size and special requirements. Further support is available. Feel free to&nbsp;<a href="http://127.0.0.1:12080/contact.html" style="background-color: rgb(255, 255, 255);">contact me</a>&nbsp;regarding your specific needs and I will send you a quote.
 </p></div></div>
 </div>
 	
@@ -223,7 +223,7 @@
 		<div class=" bd-spacer-35 clearfix"></div>
 	
 		<p class=" bd-textblock-118 bd-content-element">
-    Mentoring sessions (weekly)<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>Support (email)
+    Mentoring sessions (weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br><br>3rd party service sourcing<br><br><br>Support (email)
 </p>
 	
 		<div class=" bd-spacer-34 clearfix"></div>
@@ -256,7 +256,7 @@
 		<div class=" bd-spacer-33 clearfix"></div>
 	
 		<p class=" bd-textblock-113 bd-content-element">
-    Mentoring sessions (2x weekly)<br><br>Website analysis (weekly)<br><br>Social media analysis (weekly)&nbsp;<br><br>7 day support*<br>
+    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br><br>3rd party service sourcing<br><br><br>7 day support*<br>
 </p>
 	
 		<div class=" bd-spacer-32 clearfix"></div>
@@ -289,7 +289,7 @@
 		<div class=" bd-spacer-31 clearfix"></div>
 	
 		<p class=" bd-textblock-102 bd-content-element">
-    Mentoring sessions (2x weekly)<br><br>Website analysis (weekly)<br><br>Social media analysis (weekly)<br><br>7 day support*<br><br>Bespoke digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br><br><br><br><br>
+    Mentoring sessions (2x weekly)*<br><br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br><br><br>3rd party service sourcing<br><br>7 day support*<br><br>Bespoke digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br><br><br><br><br>
 </p>
 	
 		<div class=" bd-spacer-30 clearfix"></div>
@@ -326,7 +326,7 @@
 		<div class=" bd-spacer-29 clearfix"></div>
 	
 		<p class=" bd-textblock-92 bd-content-element">
-    Mentoring sessions (2x weekly)<br><br>Website analysis (weekly)<br><br>Social media analysis (weekly)<br><br>7 day support*<br><br>Site strategy &amp; presentation<br><br>SEO &amp; PPC managent (10hrs)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
+    Mentoring sessions (2x weekly)*<br><br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br><br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy &amp; brief<br><br>SEO &amp; PPC managent (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
 </p>
 	
 		<div class=" bd-spacer-28 clearfix"></div>
@@ -348,7 +348,7 @@
         <div class=" bd-layoutbox-39 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <p class=" bd-textblock-139 bd-content-element">
-    *7 day support is subject to availability and is available between 11am and 10pm 7 days a week.. Reports are carried out by phone or email to reduce admin time and associated costs.
+    *7 day support and mentoring is appointment only, subject to availability and is only available between 11am and 10pm Monday to Sunday. Reports are carried out by phone or email to reduce admin time and associated costs.
 </p>
     </div>
 </div>
