--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.888"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.934"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.888" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.888"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.934" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.934"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.888">
-<script src="./assets/js/layout.ie.js?1.0.888"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.934">
+<script src="./assets/js/layout.ie.js?1.0.934"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.888"></script>
+<script src="./assets/js/CloudZoom.js?1.0.934"></script>
 	
     <title>smartsprout about</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.888">
-	<script src="./assets/js/script.js?1.0.888"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.934">
+	<script src="./assets/js/script.js?1.0.934"></script>
     <meta charset="utf-8">
     
     
@@ -206,7 +206,7 @@
 </h2>
 	
 		<p class=" bd-textblock-25 bd-content-element">
-    Working in marketing over the last decade, I have become disheartened by the way corporate firms dominate. Until now, unless you had a sizable marketing budget, digital marketing support was out of reach. Smart Sprout is a digital agency that promises to keep marketing costs affordable for everyone.
+    Working in digital marketing over the last decade, I have become disheartened witnessing average businesses unable to access professional digital marketing support.&nbsp;<br><br><br>Until now, unless a business had a sizable marketing budget, digital marketing support was out of reach. Smart Sprout is a digital agency that promises to keep marketing costs affordable for everyone.
 </p>
 	
 		<div class=" bd-spacer-10 clearfix"></div>
@@ -216,7 +216,7 @@
 </h2>
 	
 		<p class=" bd-textblock-11 bd-content-element">
-    There is no office and no employees. That means no heating, lighting, water and no salaries to pay. Instead, when I feel a business would benefit from other services, I reach out to trusted freelancers who offer great services at reasonable costs and I manage the process, working closely with them to provide a solid and seamless process.<br><br>In addition to low overheads, I further reduce costs by mentoring business owners and their teams. This allows me to focus my time on the more complex parts of digital marketing while the business improves its online processes moving forward.
+    There is no office and no employees. That means no heating, lighting, water and no salaries to pay. Instead, when I feel a business would benefit from other services, I reach out to trusted freelancers who offer great services at reasonable costs and I manage the process, working closely with them to provide a solid and seamless package.<br><br>In addition to low overheads, I further reduce costs by mentoring business owners and their teams. This allows me to focus my time on the more complex parts of digital marketing while the business improves its online processes moving forward.
 </p>
 	
 		<div class=" bd-spacer-18 clearfix"></div>
@@ -226,7 +226,7 @@
 </h2>
 	
 		<p class=" bd-textblock-36 bd-content-element">
-    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books. This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
+    I will teach you and your team how to <b>produce magnetic content</b> and together we will build a results driven <b>content marketing strategy</b> and <b>outreach plan</b>. I will demonstrate a variety of on-page and off-page best practice which will place you well ahead of your competitors and in Google's good books.<br><br><br>This includes properly optimising your images, making the website more accessible for those with disabilities, correcting security vulnerabilities to avoid malicious attacks, and preparing each page so it is easily indexed by search engines and usable to visitors. It is essentially your choice how much time you want to put in and how much you want me to manage.
 </p>
     </div>
 </div>
