--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.888"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.934"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.888" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.888"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.934" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.934"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.888">
-<script src="./assets/js/layout.ie.js?1.0.888"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.934">
+<script src="./assets/js/layout.ie.js?1.0.934"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.888"></script>
+<script src="./assets/js/CloudZoom.js?1.0.934"></script>
 	
     <title>Smart Sprout Affordable Digital Marketing Services</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.888">
-	<script src="./assets/js/script.js?1.0.888"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.934">
+	<script src="./assets/js/script.js?1.0.934"></script>
     <meta charset="utf-8">
     
     
@@ -304,6 +304,8 @@
         </div>
     </div>
 </div>
+	
+		<div class=" bd-spacer-52 clearfix"></div>
     </div>
 </div>
 </div>
