Pricing page fix

--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.944"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.946"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.944" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.944"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.946" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.946"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.944">
-<script src="./assets/js/layout.ie.js?1.0.944"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.946">
+<script src="./assets/js/layout.ie.js?1.0.946"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.944"></script>
+<script src="./assets/js/CloudZoom.js?1.0.946"></script>
 	
     <title>Affordable Digital Marketing Support Pricing  Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.944">
-	<script src="./assets/js/script.js?1.0.944"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.946">
+	<script src="./assets/js/script.js?1.0.946"></script>
     <meta charset="utf-8">
     
     
@@ -223,7 +223,7 @@
 		<div class=" bd-spacer-35 clearfix"></div>
 	
 		<p class=" bd-textblock-118 bd-content-element">
-    Mentoring sessions (weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br><br>3rd party service sourcing<br><br><br>Support (email)
+    Mentoring sessions (weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>Support (email)
 </p>
 	
 		<div class=" bd-spacer-34 clearfix"></div>
@@ -256,7 +256,7 @@
 		<div class=" bd-spacer-33 clearfix"></div>
 	
 		<p class=" bd-textblock-113 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br><br>3rd party service sourcing<br><br><br>7 day support*<br>
+    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br>
 </p>
 	
 		<div class=" bd-spacer-32 clearfix"></div>
@@ -270,7 +270,7 @@
 		<div class=" bd-columnwrapper-72 
  col-md-3
  col-sm-6">
-    <div class="bd-layoutcolumn-72 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-31 bd-no-margins clearfix">
+    <div class="bd-layoutcolumn-72 bd-column" ><div class="bd-vertical-align-wrapper"><div class=" bd-layoutbox-31 animated bd-animation-1 bd-no-margins clearfix" data-animation-name="bounce" data-animation-event="onload" data-animation-duration="1000ms" data-animation-delay="7000ms" data-animation-infinited="false">
     <div class="bd-container-inner">
         <h4 class=" bd-textblock-110 bd-content-element">
     Professional
@@ -289,7 +289,7 @@
 		<div class=" bd-spacer-31 clearfix"></div>
 	
 		<p class=" bd-textblock-102 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br><br><br>3rd party service sourcing<br><br>7 day support*<br><br>Bespoke digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br><br><br><br><br>
+    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Bespoke digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br><br><br><br><br>
 </p>
 	
 		<div class=" bd-spacer-30 clearfix"></div>
@@ -326,7 +326,7 @@
 		<div class=" bd-spacer-29 clearfix"></div>
 	
 		<p class=" bd-textblock-92 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br><br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy &amp; brief<br><br>SEO &amp; PPC managent (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
+    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy &amp; brief<br><br>SEO &amp; PPC managent (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
 </p>
 	
 		<div class=" bd-spacer-28 clearfix"></div>
