--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1024"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1028"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1024" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1024"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1028" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1028"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1024">
-<script src="./assets/js/layout.ie.js?1.0.1024"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1028">
+<script src="./assets/js/layout.ie.js?1.0.1028"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1024"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1028"></script>
 	
     <title>smartsprout about</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1024">
-	<script src="./assets/js/script.js?1.0.1024"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1028">
+	<script src="./assets/js/script.js?1.0.1028"></script>
     <meta charset="utf-8">
     
     
@@ -203,7 +203,7 @@
         <div class=" bd-layoutbox-7 bd-no-margins clearfix">
     <div class="bd-container-inner">
         <h1 class=" bd-textblock-14 bd-content-element">
-    About Smart Sprout digital marketing
+    About Smart Sprout Digital Marketing
 </h1>
 	
 		<div class=" bd-spacer-22 clearfix"></div>
@@ -239,7 +239,7 @@
 		<div class=" bd-spacer-18 clearfix"></div>
 	
 		<h2 class=" bd-textblock-31 bd-content-element">
-    What will business owners learn?
+    What practical knowledge will businesses gain?
 </h2>
 	
 		<p class=" bd-textblock-36 bd-content-element">
@@ -249,6 +249,12 @@
 </div>
     </div>
 </section>
+	
+		<div class="bd-containereffect-13 container-effect container ">
+<h1 class=" bd-textblock-50  bd-content-element">
+    What my clients are saying
+</h1>
+</div>
 	
 		<section class=" bd-section-24 bd-tagstyles" id="testimonials" data-section-title="Testimonials">
     <div class="bd-container-inner bd-margins clearfix">
