--- a/pricing.html
+++ b/pricing.html
@@ -5,24 +5,24 @@
 	<script>
     var themeHasJQuery = !!window.jQuery;
 </script>
-<script type="text/javascript" src="./assets/js/jquery.js?1.0.1028"></script>
+<script type="text/javascript" src="./assets/js/jquery.js?1.0.1044"></script>
 <script>
     window._$ = jQuery.noConflict(themeHasJQuery);
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1028" media="screen" />
-<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1028"></script>
+<link rel="stylesheet" href="./assets/css/bootstrap.css?1.0.1044" media="screen" />
+<script type="text/javascript" src="./assets/js/bootstrap.min.js?1.0.1044"></script>
 <!--[if lte IE 9]>
-<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1028">
-<script src="./assets/js/layout.ie.js?1.0.1028"></script>
+<link rel="stylesheet" href="./assets/css/layout.ie.css?1.0.1044">
+<script src="./assets/js/layout.ie.js?1.0.1044"></script>
 <![endif]-->
 <link class="" href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic&subset=latin' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="./assets/js/layout.core.js"></script>
-<script src="./assets/js/CloudZoom.js?1.0.1028"></script>
+<script src="./assets/js/CloudZoom.js?1.0.1044"></script>
 	
     <title>Affordable Digital Marketing Support Pricing  Smart Sprout</title>
-	<link rel="stylesheet" href="./assets/css/style.css?1.0.1028">
-	<script src="./assets/js/script.js?1.0.1028"></script>
+	<link rel="stylesheet" href="./assets/css/style.css?1.0.1044">
+	<script src="./assets/js/script.js?1.0.1044"></script>
     <meta charset="utf-8">
     
     
@@ -311,7 +311,7 @@
 </a>
 	
 		<p class=" bd-textblock-177 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Bespoke digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br>
+    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br style="background-color: rgb(255, 255, 255);"><br style="background-color: rgb(255, 255, 255);">Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br>Optimisation (on-page)<br><br>Monthly report (phone/email)*<br>
 </p>
     </div>
 </div></div></div>
@@ -347,7 +347,7 @@
 </a>
 	
 		<p class=" bd-textblock-188 bd-content-element">
-    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy &amp; brief<br><br>SEO &amp; PPC managent (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
+    Mentoring sessions (2x weekly)*<br><br>Website analysis (monthly)<br><br>Social media analysis (monthly)<br><br>3rd party service sourcing<br><br>7 day support*<br><br>Digital strategy<br><br><br>Discounted team training<br><br><br>SEO &amp; PPC managent (1 day)<br><br>Content planning<br><br>Monthly report (phone/email)*<br style="background-color: rgb(235, 235, 235);">
 </p>
     </div>
 </div></div></div>
@@ -555,6 +555,8 @@
 </div>
     </div>
 </section>
+	
+		<div class="bd-containereffect-20 container-effect container "><div class=" bd-spacer-90  clearfix"></div></div>
 </div>
 </div></div>
 	
